2014-12-10  Scott Bartell <sbartell@uci.edu>

	* DESCRIPTION (Version): New version is 0.7-4

	* R/colormap.R: changed to improve scale size and appearance, and position 
	of legend.  Added "contours" argument for contours based on either permutation
	test p-values or predicted response.  Also fixed error in example code.

	* NAMESPACE: added import and importFrom commands to conform to new CRAN policy.    

	* R/sampcont.R, R/trimdata.R: added PBSmapping:: to functions called from 
	that package, and updated documentation to clarify which options require
	PBSmapping.  

2013-12-12  Scott Bartell <sbartell@uci.edu>

	* DESCRIPTION (Version): New version is 0.7-0

	* R/modgam.R, R/optspan.R, R/colormap.R: MapGAM now includes an
	unconditional permutation test, and allows the user to select 
	any family and link function.  The package was previously limited 
	to the (now default) binomial family with a logit link, but potential 
	applications are broader such as investigation of joint effects of chemical 
	mixtures (suggested by Tom Webster, Boston University).  The relevant 
	help files are updated to reflect these changes, and new examples have 
	been added to the modgam help file.   

	* data/MAdata.rda: Added two new columns to the simulated data set, 
	for use in a new chemical mixtures example.   

2013-03-11  Scott Bartell <sbartell@uci.edu>

	* DESCRIPTION (Version): New version is 0.6-2

	* DESCRIPTION (Depends/Suggests): PBSmapping changed from Depends
	to Suggests, for compatibility with new PBSmapping license.

	* man/trimdata.Rd, man/predgrid.Rd, man/MapGAM-package.Rd, 
	man/colormap.Rd, man/sampcont.Rd: only test certain examples if 
	PBSmapping is installed, and note when non-tested examples require
 	PBSmapping. 

2012-12-23  Scott Bartell <sbartell@uci.edu>

	* DESCRIPTION (Version): New version is 0.6-1

	* R/modgam.R (modgam): corrected error in p-value calculation for 
	global permutation test for significance of location.  Thanks to 