@@ -1,8 +1,8 @@
 Package: MapGAM
 Type: Package
 Title: Mapping Smoothed Effect Estimates from Individual-Level Data
-Version: 0.7-4
-Date: 2014-12-10
+Version: 0.7-5
+Date: 2015-05-02
 Author: Veronica Vieira, Scott Bartell, and Robin Bliss
 Maintainer: Scott Bartell <sbartell@uci.edu>
 Description: Contains functions for mapping odds ratios or other effect estimates using individual-level data such as case-control study data, using generalized additive models (GAMs) for smoothing with a two-dimensional predictor (e.g., geolocation or exposure to chemical mixtures) while adjusting for confounding variables, using methods described by Kelsall and Diggle (1998) and Webster at al. (2006).  Includes convenient functions for mapping, efficient control sampling, and permutation tests for the null hypothesis that the two-dimensional predictor is not associated with the outcome variable (adjusting for confounders).     
@@ -10,7 +10,7 @@ License: GPL-3
 Depends: R (>= 2.10.0), sp, gam
 Imports: maptools
 Suggests: maps, mapproj, PBSmapping
-Packaged: 2014-12-10 08:48:30 UTC; sbartell
 NeedsCompilation: no
+Packaged: 2015-05-02 20:48:14 UTC; sbartell
 Repository: CRAN
-Date/Publication: 2014-12-10 10:14:11
+Date/Publication: 2015-05-03 07:07:27
