@@ -1,21 +1,21 @@
-aa249a55f479f57acd19d18682afa0e4 *ChangeLog
-4c8ae2c965b3134f526da4f54d5828fc *DESCRIPTION
+b8ba92ceaf6da488597b2faf9c23eecc *ChangeLog
+cd823d26c3a840c1d4868bf231839ab4 *DESCRIPTION
 85b78307e9eb2d4444f67422366f0679 *NAMESPACE
-56242a7389ac70fcdc5ef8cc87e7782e *R/colormap.R
+08035f4610591477a593a3bbcbeb5d7c *R/colormap.R
 e78a684ef7c13fce6dc6d0668dbaa0bf *R/modgam.R
 b10f11ded80749b8d5049a0abf38f8f4 *R/optspan.R
 bf16da0e48c21ae9b0dcdf343fa4446f *R/predgrid.R
 14c1053718d028cf19f44de7f283890a *R/sampcont.R
-c350b2f9787dab305d09e767065037bc *R/trimdata.R
+eaa7fd5723d383a775f8f4f771187efa *R/trimdata.R
 51e3067766923c51f6c96d494ecac6ed *data/MAdata.rda
 84a1d3f04fba5b54ab4498f30ca352c9 *data/MAmap.rda
 673a40f5900da6c8f321c5c4d8da2da8 *data/beertweets.rda
-5681b62c1a1bce647a8e89a788668c0f *man/MAdata.Rd
+0392bceee856fe7937740b4f210b7ace *man/MAdata.Rd
 07a551793449eb07031256d68045aba3 *man/MAmap.Rd
-e01b8268f2330ff726caf822fa3ba8ec *man/MapGAM-package.Rd
+71e6e76556571e3bb60b5aa59b7c8b19 *man/MapGAM-package.Rd
 9d27e5afa13347fb70e211699207ff12 *man/beertweets.Rd
-e14ed8562a5e2971ad40283feb282a3c *man/colormap.Rd
-49c1558aea884b884c5f76beb15ba46a *man/modgam.Rd
+fcb850b9d2886dcf91658de3b2d9af7b *man/colormap.Rd
+c10e9cf0106ed7a4e22c24bae8e3117a *man/modgam.Rd
 108a5b8a8f50871bc877f2192ff26445 *man/optspan.Rd
 a5d2bbe061af4d237f8140d45fb8a04c *man/predgrid.Rd
 0d821fb28f13947931700d75b3e62f6c *man/sampcont.Rd
