@@ -12,8 +12,8 @@ Contains functions for mapping odds ratios or other effect estimates using indiv
 \tabular{ll}{
 Package: \tab MapGAM\cr
 Type: \tab Package\cr
-Version: \tab 0.7-4\cr
-Date: \tab 2014-12-10\cr
+Version: \tab 0.7-5\cr
+Date: \tab 2014-05-02\cr
 License: \tab GPL-3\cr
 }
 Typical spatial applications will start with the predgrid function to create a regular grid of points within the study area, with optional map boundaries (e.g., a country, state, or regional map).  Crude or adjusted odds ratios (or linear predictors) are then estimated at each grid point using the modgam function to smooth by geolocation.  Finally, the predicted values (and optionally, "clusters"--areas of signficantly increased or decreased values determined via permutation tests) are plotted using the colormap function.  The trimdata and sampcont functions can be used to restrict data to those within map boundaries and to conduct simple or spatiotemporal stratified sampling from eligible controls.  The optspan function can be used to find an optimal span size for the LOESS smoother used by the modgam function; it is automatically used within the modgam function when the span size is not provided by the user.  These functions can also be applied to non-spatial data when two-dimensional smoothing is of interest, such as investigation of the effects of a mixture of two chemicals.}
@@ -35,7 +35,7 @@ Webster T, Vieira V, Weinberg J, Aschengrau A. \href{http://www.ij-healthgeograp
 
 Young RL, Weinberg J, Vieira V, Ozonoff A, Webster TF. \href{http://www.ij-healthgeographics.com/content/9/1/37}{A power comparison of generalized additive models and the spatial scan statistic in a case-control setting}. International Journal of Health Geographics 2010, 9:37.
 
-\url{http://www.busrp.org/projects/project2.html}
+\url{http://www.busrp.org/projects/project-2-analyzing-patterns-in-epidemiologic-and-toxicologic-data}
 }
 
 \keyword{ package }
