@@ -1,3 +1,13 @@
+2015-05-02  Scott Bartell <sbartell@uci.edu>
+
+	* DESCRIPTION (Version): New version is 0.7-5
+
+	* R/colormap.R: added "axes" argument, which improves appearance and readability
+	of chemical mixture interaction plots when set to TRUE.    
+
+	* R/trimdata.R: changed CRS function call to conform to new error checks in the
+	sp package.   
+
 2014-12-10  Scott Bartell <sbartell@uci.edu>
 
 	* DESCRIPTION (Version): New version is 0.7-4
